--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -7,7 +7,7 @@
     <form action="{% url 'index' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
-            <input autofocus class="form-control" type="text" name="content" placeholder="Your text here">
+            <textarea autofocus class="form-control" name="content" placeholder="Your text here"></textarea>
         </div>
         <input class="btn btn-primary" type="submit" value="Post">
     </form>
@@ -16,7 +16,7 @@
 
     <h2>All Posts</h2>
 
-    {% for post in posts %}
+    {% for post in page_obj %}
         <div class="card text card-custom mb-4">
             <div class="row no-gutters">
                 <div class="col-md-8">
@@ -30,12 +30,66 @@
                             <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
                         </svg> {{ post.likes }}
                         </p>
-                        <p class="card-text card-description">
+                        <p class="card-text card-description" id="post-content-{{ post.id }}">
                             {{ post.content }}
                         </p>
+                        <div>
+                            <textarea class="new-textareas"></textarea>
+                        </div>
+                        {% if user.is_authenticated %}
+                            {% if request.user != post.user %}
+                            <div class="btn-group">
+                                <form class="buttons">
+                                    {% csrf_token %}
+                                    <input class="btn btn-success" type="submit" value="LIKE">
+                                </form>
+                            </div>
+                            {% else %}
+                                <div class="btn-group">
+                                    <form class="buttons">
+                                        {% csrf_token %}
+                                        <input class="btn btn-primary edit-buttons" id="{{ post.id }}" type="submit" value="EDIT">
+                                    </form>
+                                </div>
+                            {% endif %}
+                        {% endif %}
                     </div>
                 </div>
             </div>
         </div>
     {% endfor %}
+
+    <nav aria-label="...">
+        <ul class="pagination">
+            {% if not page_obj.has_previous %}
+                <li class="page-item disabled">
+                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+                </li>
+            {% else %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}" tabindex="-1" aria-disabled="true">Previous</a>
+                </li>
+            {% endif %}
+            {% for page in page_obj.paginator.page_range %}
+                {% if page == page_obj.number %}
+                    <li class="page-item active" aria-current="page">
+                        <a class="page-link" href="#">{{ page }} <span class="sr-only">(current)</span></a>
+                    </li>
+                {% else %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page }}">{{ page }}</a>
+                    </li> 
+                {% endif %}
+            {% endfor %}
+            {% if page_obj.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">Next</a>
+                </li>
+            {% endif %}
+        </ul>
+      </nav>
 {% endblock %}
