--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -3,27 +3,25 @@
 {% block body %}
     <br>    
 
-    <h2><strong>{{ user.username }}</strong> Profile</h2>
+    <h2><strong>{{ profile_user.username }}</strong> Profile</h2>
     <hr>
     <h3>Followers - <strong>{{ followers_n }}</strong> / Following - <strong>{{ following_n }}</strong></h3>
     <hr>
-    {% if user.is_authenticated %}
-        {% if not is_user %}
-            {% if is_following %}
-            <form action="{% url 'follow' user.id %}" method="post">
-                {% csrf_token %}
-                <input class="btn btn-secondary" type="submit" value="Stop following">
-            </form>
-            {% else %}
-            <form action="{% url 'follow' user.id %}" method="post">
-                {% csrf_token %}
-                <input class="btn btn-primary" type="submit" value="Start following">
-            </form>                        
-            {% endif %}
+    {% if user.is_authenticated and not is_user %}
+        {% if is_following %}
+        <form action="{% url 'follow' profile_user.id %}" method="post">
+            {% csrf_token %}
+            <input class="btn btn-secondary" type="submit" value="UNFOLLOW">
+        </form>
+        {% else %}
+        <form action="{% url 'follow' profile_user.id %}" method="post">
+            {% csrf_token %}
+            <input class="btn btn-primary" type="submit" value="FOLLOW">
+        </form>                        
         {% endif %}
     <hr>
     {% endif %}
-    
+
     <h3>Posts</h3>
     {% for post in posts %}
         <div class="card text card-custom mb-4">
