--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -28,7 +28,7 @@
                         <p>
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
-                        </svg> {{ post.likes }}
+                        </svg><b id="like-{{ post.id }}"> {{ post.likes }} </b>
                         </p>
                         <p class="card-text card-description" id="post-content-{{ post.id }}">
                             {{ post.content }}
@@ -40,21 +40,14 @@
                         {% if user.is_authenticated %}
                             {% if request.user != post.user %}
                             <div class="btn-group">
-                                <form class="buttons">
-                                    {% csrf_token %}
-                                    <input class="btn btn-success like-buttons" id="{{ post.id }}" type="submit" value="LIKE">
-                                </form>
+                                <button class="btn btn-success like-buttons" id="{{ post.id }}">LIKE</button>
                             </div>
                             {% else %}
                                 <div class="btn-group" id="edited-button-{{ post.id}}">
-                                    <form class="buttons">
-                                        <input class="btn btn-primary edit-buttons" id="{{ post.id }}" value="EDIT">
-                                    </form>
+                                    <button class="btn btn-primary edit-buttons" id="{{ post.id }}">EDIT</button>
                                 </div>
                                 <div class="btn-group">
-                                    <form class="buttons">
-                                        <input class="btn btn-primary save-buttons" id="save-button-{{ post.id }}" value="SAVE">
-                                    </form>
+                                    <button class="btn btn-primary save-buttons" id="save-button-{{ post.id }}">SAVE</button>
                                 </div>
                             {% endif %}
                         {% endif %}
